testsuite/veronac/codegen/compile-fail/main-has-arguments.out/stderr.txt
main-has-arguments.verona:5:3: error: Method 'main' has an invalid signature
  main(x: U64) { }
  ^~~~
1 error generated
